tests/toylang/neg/001442_mutation.toylang
program a = { var a : int 0; } .
